# research-utils

./: .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  STATUS.md  pyproject.toml
.github/workflows/: adr-index.yml  ci.yml  nightly.yml  release.yml
docs/: how-to-add-optimizer.md  how-to-use-agents.md  how-to-use-harness.md  how-to-write-adapter.md  v0.2-action-plan.md  v0.2-execution-plan.md  v0.3-lab-quickstart.md  v0.3-roadmap.md  v0.4-roadmap.md  v1.0-action-plan.md  v1.1-lab-quickstart.md  v1.1-roadmap.md  v1.2-roadmap.md
docs/adr/: 0001-canonical-result-contracts.md  0002-optional-dependency-boundaries.md  0003-determinism-policy.md  0004-optimization-composition-semantics.md  0005-run-summary-artifact-schema.md  0006-agent-tooling-responsibilities.md  0007-mixed-parameter-space-contract.md  0008-agent-workflow-contracts.md  INDEX.md
docs/releases/: v0.2.0.md  v0.3.0.md  v0.4.0.md  v1.0.0.md  v1.1.0.md  v1.2.0.md
examples/: __init__.py  dummy_end_to_end.py
scripts/: adr_tools.py
src/phys_sims_utils/: __init__.py
src/phys_sims_utils/agents/: __init__.py  experiment_gen.py  repo_checks.py  sim_introspect.py  workflows.py
src/phys_sims_utils/harness/: __init__.py  core.py  metrics.py  reporting.py  sweep.py
src/phys_sims_utils/harness/adapters/: __init__.py  base.py  phys_pipeline.py
src/phys_sims_utils/harness/plotting/: __init__.py  common.py  optimization_plots.py  sweep_plots.py
src/phys_sims_utils/ml/: __init__.py  core.py  evaluator.py  logging.py  param_space.py  runner.py
src/phys_sims_utils/ml/strategies/: __init__.py  base.py  cmaes.py  composition.py  random.py  sobol.py
src/phys_sims_utils/shared/: __init__.py  types.py
src/research_utils/: __init__.py
src/research_utils/agents/: __init__.py  experiment_gen.py  repo_checks.py  sim_introspect.py
src/research_utils/harness/: __init__.py  core.py  metrics.py  reporting.py  sweep.py
src/research_utils/harness/adapters/: __init__.py  base.py  phys_pipeline.py
src/research_utils/harness/plotting/: __init__.py  optimization_plots.py  sweep_plots.py
src/research_utils/ml/: __init__.py  core.py  evaluator.py  logging.py  param_space.py  runner.py
src/research_utils/ml/strategies/: __init__.py  base.py  cmaes.py  composition.py  random.py  sobol.py
src/research_utils/shared/: __init__.py  types.py
src/sim_utils/: __init__.py
src/sim_utils/agents/: __init__.py  core.py  experiment_gen.py  sim_introspect.py
src/sim_utils/harness/: __init__.py  core.py  metrics.py  reporting.py
src/sim_utils/harness/adapters/: __init__.py  base.py  phys_pipeline.py
src/sim_utils/harness/plotting/: __init__.py  optimization_plots.py  sweep_plots.py
src/sim_utils/ml/: __init__.py  core.py  evaluator.py  logging.py  runner.py
src/sim_utils/ml/strategies/: __init__.py  base.py  cmaes.py  (+3 more)
src/sim_utils/shared/: __init__.py  types.py
tests/: test_agent_workflows_v04.py  test_agents_tools.py  test_cmaes_strategy.py  test_contract_types.py  test_dependency_direction.py  test_end_to_end_dummy_example.py  test_harness_sweep_determinism.py  test_optimization_runner.py  test_param_space.py  test_phys_pipeline_adapter.py  test_plotting.py  test_simulation_evaluator.py  test_smoke_imports.py  test_strategy_composition_and_reporting.py  test_sweep_determinism.py
tests/golden/agents/: generated_experiment.py.golden  invalid_script.py
