[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phys-sims-utils"
version = "0.2.0"
description = "Shared research infrastructure for deterministic experimentation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Ryaan Lari", email = "lari2@illinois.edu"}
]
dependencies = []


[project.optional-dependencies]
harness = [
  "matplotlib>=3.8",
]
ml = [
  "numpy>=1.26",
  "scipy>=1.11",
  "cma>=3.3",
]
agent = [
  "pydantic>=2.7",
]
all = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "scipy>=1.11",
  "cma>=3.3",
  "pydantic>=2.7",
]
dev = [
  "pre-commit",
  "pytest",
  "mypy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["phys_sims_utils*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
mypy_path = "src"
packages = ["phys_sims_utils"]



[[tool.mypy.overrides]]
module = ["pytest", "_pytest.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
